# pixy2_for_pi

./: CMakeLists.txt  LICENSE  README.md  mcp.py
cmake/: Setup.cmake
examples/: CMakeLists.txt  chirp_command_cpp_demo.cpp  pan_tilt_demo.cpp
scripts/: install_libpixyusb2.sh
